--- a/src/scss/40-components/_button-logo.scss
+++ b/src/scss/40-components/_button-logo.scss
@@ -12,6 +12,9 @@ $button-logo-foreground-color: color(white);
   position: relative;
   left: -8px;
   top: 5px;
+  @include breakpoint($bp--title-curve--shrink) {
+    left: -16px;
+  }
 }
 
 .button-logo--word {
@@ -64,6 +67,7 @@ $button-logo-foreground-color: color(white);
   [class^='char'] {
     //outline: 1px solid red;
     position: absolute;
+    $height-small: 6em;
     $height: 7em;
     $width: 1em;
     height: $height;
@@ -75,6 +79,10 @@ $button-logo-foreground-color: color(white);
     border-style: solid;
     border-color: rgba(color(white), 0.15);
     transform-origin: 50% 100%;
+    @include breakpoint($bp--title-curve--shrink) {
+      height: $height-small;
+      top: -$height-small;
+    }
   }
 }
 
