--- a/src/scss/00-config/03-mixins/_button-logo.scss
+++ b/src/scss/00-config/03-mixins/_button-logo.scss
@@ -4,11 +4,6 @@
   justify-content: center;
   align-items: flex-end;
   background-color: $background-color;
-  //background-image: url(https://unsplash.it/400/400?image=961);
-  background-image: url(https://unsplash.it/400/400?random);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   color: $background-color;
   font-size: fontsize-rem(ms(4));
   font-family: font(surveyor);
@@ -35,4 +30,13 @@
     width: auto;
     border-radius: 0;
   }
+}
+
+@mixin button-logo-image($background-image, $background-color: #BBBBBB, $background-blend: multiply) {
+  background-color: $background-color;
+  background-blend-mode: $background-blend;
+  background-image: url($background-image);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
