--- a/src/scss/40-components/_navigation-main.scss
+++ b/src/scss/40-components/_navigation-main.scss
@@ -18,6 +18,7 @@
 .nav-primary {
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
   @include breakpoint($bp--navigation--wide) {
     position: relative;
     top: -1em;
@@ -40,7 +41,8 @@
     align-items: center;
     margin: 1.5em 1em 5em;
     min-width: 40em;
-    //padding-left: 5%;
+    border-bottom: 0.25em double currentColor;
+    padding-bottom: 5em;
   }
   @include breakpoint(870px) {
     padding-left: 15%;
@@ -48,7 +50,9 @@
   @include breakpoint(1100px) {
     justify-content: center;
     padding-left: 0;
-    margin-left: -10%;
+    .button-logo {
+      margin-left: -7em;
+    }
   }
   .button-logo {
     z-index: 1;
@@ -58,13 +62,11 @@
 .nav-primary--fan {
   @include nav-primary--item();
   @include breakpoint($bp--navigation--narrow) {
-    width: 100%;
     text-align: right;
     padding-top: 0;
     padding-right: 0.5em;
     padding-bottom: 0;
     padding-left: 0.5em;
-    margin-top: -0.5em;
     font-weight: 800;
     max-height: 0;
     overflow: hidden;
@@ -72,22 +74,8 @@
     transition-property: max-height, padding, opacity;
     transition-duration: 0.3s;
     transition-timing-function: ease-in-out;
-    $nav-rotate-amount: 1.5deg;
-    &:nth-of-type(odd) {
-      transform: rotate(-$nav-rotate-amount);
-      a {
-        transform: rotate($nav-rotate-amount) translateX(0.5em);
-      }
-    }
-    &:nth-of-type(even) {
-      transform: rotate($nav-rotate-amount);
-      a {
-        transform: rotate(-$nav-rotate-amount) translateX(0.5em);
-      }
-    }
     &:nth-of-type(1) {
-      transform: rotate(0deg);
-      color: white;
+      color: color(white);
       margin-top: -2.5em;
       z-index: 1;
       max-height: 10em;
@@ -96,7 +84,8 @@
       opacity: 1;
     }
     &:nth-of-type(1n+2) {
-      border-bottom: 1px solid color(gray, light);
+      border-bottom: 2px solid color(gray, light);
+      margin-right: -0.5em;
     }
     a {
       @include unset-background-links();
@@ -119,7 +108,6 @@
     transition-property: transform, opacity;
     transition-duration: 0.3s;
     transition-timing-function: ease-in-out;
-    //background-color: red;
     &:nth-of-type(1n + 2) {
       opacity: 0;
     }
