start speaking page

--- a/src/patterns/01-molecules/05-navigation/00-primary-nav.mustache
+++ b/src/patterns/01-molecules/05-navigation/00-primary-nav.mustache
@@ -4,6 +4,7 @@
   <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">Home</a></div>
   <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">Portfolio</a></div>
   <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">Speaking</a></div>
+  <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">Photography</a></div>
   <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">Posts</a></div>
   <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">About</a></div>
 </nav>
