--- a/src/scss/10-base/_00-base.scss
+++ b/src/scss/10-base/_00-base.scss
@@ -21,7 +21,7 @@ body {
   background-color: $color-background;
   background-attachment: fixed;
   height: 100%;
-  margin: 0;
+  margin: 0 auto;
   position: relative;
   padding: 0 0.5em;
   //overflow-x: hidden;
