--- a/src/patterns/03-pages/02-speaking.mustache
+++ b/src/patterns/03-pages/02-speaking.mustache
@@ -3,146 +3,11 @@
 <!--SPEAKING PAGE CONTENT-->
 <div class="page--speaking page-content">
   <h1>Speaking</h1>
-  <div class="intro">
-    <div class="intro--text">
-      <p>I've been speaking at meetups, bar camps, and regional and national conferences for the last six years.</p>
-      <p>I often speak about Designing in the Browser, Sass, Drupal, and Responsive Web Design. I produced a video podcast that teaches people about how they can use these tools and techniques creatively. I also blog at The Coding Designer and The Sass Way.</p>
-    </div>
-    <!--<figure class="intro-image-2">-->
-    <!--<img src="../../../../src/images/speaking/sass-conf--speaker-panel.jpg" alt="Mason Wendell speaking at Devsigner in Portland, Oregon">-->
-    <!--<figcaption>Speaker panel at SassConf NYC. l-r: Una Kravets, Rachel tktktk Elise tktktk, Mason Wendell, Jina Bolton, Natalie Wiesenbaum</figcaption>-->
-    <!--</figure>-->
-    <figure class="intro-image">
-      <img src="../../../../src/images/speaking/devsigner-2015-keynote.jpg" alt="Mason Wendell speaking at Devsigner in Portland, Oregon">
-      <figcaption>Speaking at Devsigner in Portland, Oregon <br/>Photo by <a href="https://twitter.com/Mindewen/status/614835142842912768">@Mindewen</a></figcaption>
-    </figure>
-  </div>
+  {{# intro}}
+    {{>// organisms-intro}}
+  {{/intro}}
 
-  <div class="talk">
-    <h2 class="talk--title"><span class="width-limiter">Thinking Inside the Box <br/>Inside the Box Inside the Box</span></h2>
-    <div class="talk--description">
-      <figure class="talk--sample-slide">
-        <img src="../../../../src/images/speaking/box--sample-slide.png" alt="Sample slide from presentation">
-        <figcaption>Sample slide from presentation</figcaption>
-      </figure>
-      <p>Great design, like jazz, needs both harmony and discord skillfully executed in just the right places. On the web, many of our projects are playing sour notes. Let’s get in tune.</p>
-      <p>Even in the age or Responsive Web Design, many sites are designed from the outside in. Whether the page is defined in Photoshop or, let’s hope, in-browser, many design projects slide out of tune when they get to the second or third page. Components are inconsistent, page and layout dimensions vary, font sizes shift. These details add up. Living style guides have been proposed to address this problem, the trouble is they’re often extracted from the finished project.</p>
-      <p>Let’s design the style guide first. Start from inside out with the most common aspects of a design language. Instead of envisioning individual pages, work to create a cohesive family of components and layouts that can be assembled into any page. By leveraging a tools that help us create the elements of out design language and visualize them in various contexts, we can make components, layouts, and even working pages that snap together beautifully. It’s the new blank paper.</p>
-    </div>
-    <ul class="talk--events">
-      <li class="talk--event"><span class="talk--event-name"><a
-          href="http://www.devsignercon.com/conference/keynote">Devsigner Con 2015</a></span>
-        <em>[KEYNOTE]</em> - Portland, OR</li>
-      <li class="talk--event"><span class="talk--event-name">Capital Camp</span> - Alexandria, VA</li>
-      <li class="talk--event"><span class="talk--event-name">Design 4 Drupal</span> - MIT, Cambridge, MA</li>
-      <li class="talk--event"><span class="talk--event-name"><a
-          href="http://environmentsforhumans.com/2014/sass-summit/">Sass Summit</a></span> - online</li>
-      <li class="talk--event"><span class="talk--event-name"><a href="http://sassconf.com/">SassConf 2014</a></span> - NYC, NY</li>
-      <li class="talk--event"><span class="talk--event-name"><a
-          href="https://austin2014.drupal.org/session/thinking-inside-box-inside-box-inside-box">DrupalCon 2014</a></span> - Austin, TX</li>
-    </ul>
-    <div class="talk--slides">
-      <a href="http://codingdesigner.github.io/box/#/main-title">Slides</a>
-    </div>
-    <div class="talk--video">
-      <iframe width="960" height="720" src="https://www.youtube-nocookie.com/embed/SG9ZU5ZJgbw?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <div class="talk--reactions">
-      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Beautiful keynote for <a href="https://twitter.com/devsigner">@devsigner</a> by <a href="https://twitter.com/codingdesigner">@codingdesigner</a> - symmetries between music theory, jazz, design process. (1/2)</p>&mdash; Josh Koenig (@outlandishjosh) <a href="https://twitter.com/outlandishjosh/status/614836891951591424">June 27, 2015</a></blockquote>
-      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">I love to see design grow up and get structured - <a href="https://twitter.com/codingdesigner">@codingdesigner</a> has some great SASS tricks that makes CSS enhance creativity. <a href="https://twitter.com/hashtag/devsigner?src=hash">#devsigner</a></p>&mdash; Mike Lonergan (@ParanoidMike) <a href="https://twitter.com/ParanoidMike/status/614843355273412609">June 27, 2015</a></blockquote>
-      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">On components: &quot;It&#39;s not about starting small and working out—it&#39;s about coming in &amp; out of high-level designing&quot; <a href="https://twitter.com/codingdesigner">@codingdesigner</a> <a href="https://twitter.com/hashtag/devsigner?src=hash">#devsigner</a></p>&mdash; PDXTech4Good (@PDXTech4Good) <a href="https://twitter.com/PDXTech4Good/status/614838606771941376">June 27, 2015</a></blockquote>
-      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Fantastic presentation on an inside-out design process by <a href="https://twitter.com/codingdesigner">@codingdesigner</a> <a href="http://t.co/aFYywVG4IM">http://t.co/aFYywVG4IM</a> <a href="https://twitter.com/hashtag/DrupalCon?src=hash">#DrupalCon</a> <a href="http://t.co/iFuYg9UPN9">pic.twitter.com/iFuYg9UPN9</a></p>&mdash; Brian Krall (@bkrall) <a href="https://twitter.com/bkrall/status/474308270555791360">June 4, 2014</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Awesome <a href="https://twitter.com/hashtag/drupalcon?src=hash">#drupalcon</a> presentation by <a href="https://twitter.com/codingdesigner">@codingdesigner</a> on style guides. Lots of good theory but also some tangible action items. Much thx.</p>&mdash; Michael B. Giaimo (@michaelgiaimo) <a href="https://twitter.com/michaelgiaimo/status/474301519475388416">June 4, 2014</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/codingdesigner">@codingdesigner</a> is making some very strong arguments for in browser design. Really digging his slides. <a href="https://twitter.com/hashtag/drupalcon?src=hash">#drupalcon</a></p>&mdash; Chet Gassett (@TXChetG) <a href="https://twitter.com/TXChetG/status/474298313739862016">June 4, 2014</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-      <blockquote class="comment">
-        <p>This session was hands-down my most productive hour at Drupalcon. Not only did it open my mind to a completely different approach to design, but it streamlined my development process as well. I now have a brand new mindset going into my current projects.</p>
-        <p>drupalatx via <a href="https://austin2014.drupal.org/comment/2513.html#comment-2513">Drupalcon</a></p>
-      </blockquote>
-    </div>
-  </div>
-
-  <div class="talk">
-    <h2 class="talk--title"><span class="width-limiter">Managing Responsive Web Design With Sass And Breakpoint</span></h2>
-    <div class="talk--description">
-      <p>Writing css for responsive web design can get out of control quickly. Write some media queries for your layouts, some more for your menus, and even more to catch all the little details in a well-crafted design and they really add up.</p>
-      <p>I created a Sass extension called Breakpoint that lets you boil your media queries to their essential properties, and to give each one a meaningful name. This helps you write your styles more quickly, while also creating more maintainable and future-proof code. I'll demonstrate why this is needed and how it's become indespensible in my RWD toolset.</p>
-    </div>
-    <ul class="talk--events">
-      <li class="talk--event"><span class="talk--event-name"><a
-          href="https://portland2013.drupal.org/session/managing-responsive-web-design-sass-and-breakpoint.html">Drupalcon 2013</a></span> - Portland, OR</li>
-    </ul>
-    <div class="talk--video">
-      <iframe width="960" height="720" src="https://www.youtube-nocookie.com/embed/fgmXVxYnoWo?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <div class="talk--reactions">
-      <blockquote class="comment">
-        <p>Doing mostly backend development, over time I've shied away from front end development. Mason as a coding designer has made me more interested in bridging those. One of the things I like about Sass is how reusable style rules can help the process become really simplified and more logical. But one of the questions I've had is how to keep it all manageable - media queries for example. A tool to help with that sounds like something I'd like to hear about.</p>
-        <p>scottrigby via <a href="https://portland2013.drupal.org/comment/928.html#comment-928">Drupalcon</a></p>
-      </blockquote>
-    </div>
-  </div>
-
-  <div class="talk">
-    <h2 class="talk--title"><span class="width-limiter">Designing with a Living Style Guide</span></h2>
-    <ul class="talk--events">
-      <li class="talk--event"><a href="http://www.meetup.com/gothamsass/events/86565842/">NYC Sass Meetup</a> - NYC, NY</li>
-    </ul>
-  </div>
-
-  <div class="talk">
-    <h2 class="talk--title"><span class="width-limiter">Responsive Web Design</span></h2>
-    <ul class="talk--events">
-      <li class="talk--event"><span class="talk--event-name"><a
-          href="http://www.meetup.com/rwd-nyc/events/79888832/">NYC Responsive Web Design Meetup</a></span> - NYC, NY</li>
-    </ul>
-  </div>
-
-  <div class="talk">
-    <h2 class="talk--title"><span class="width-limiter">Mobile and Responsive Design with Sass</span></h2>
-    <ul class="talk--events">
-      <li class="talk--event"><span class="talk--event-name">Drupaldelphia 2012</span> - Philadelphia, PA</li>
-      <li class="talk--event"><span class="talk--event-name">NYC Sass Meetup</span> - NYC, NY</li>
-      <li class="talk--event"><span class="talk--event-name">Capital Camp 2012</span> - Washington, DC</li>
-      <li class="talk--event"><span class="talk--event-name">NYC Camp</span> - NYC, NY</li>
-    </ul>
-    <div class="talk--slides">
-      <iframe src="//www.slideshare.net/slideshow/embed_code/key/7cBnnjjONAa60R" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/canarymason/designing-in-the-browser-mason-wendell-drupaldelphia" title="Designing in the Browser - Mason Wendell, Drupaldelphia" target="_blank">Designing in the Browser - Mason Wendell, Drupaldelphia</a> </strong> from <strong><a href="//www.slideshare.net/canarymason" target="_blank">canarymason</a></strong> </div>
-    </div>
-    <div class="talk--video">
-      <iframe src="https://player.vimeo.com/video/44889054" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-      <p><a href="https://vimeo.com/44889054">Mobile and Responsive Design with Sass by Mason Wendell</a> from <a href="https://vimeo.com/drupaldelphia">Drupaldelphia</a> on <a href="https://vimeo.com">Vimeo</a>.</p></iframe>
-    </div>
-  </div>
-
-  <div class="talk">
-    <h2 class="talk--title"><span class="width-limiter">Intro to Sass</span></h2>
-    <ul class="talk--events">
-      <li class="talk--event"><span class="talk--event-name">Bar Camp Philly, 2011</span> - Philadelphia, PA</li>
-    </ul>
-  </div>
-
-  <div class="talk">
-    <h2 class="talk--title"><span class="width-limiter">The Coding Designer's Survival Kit</span></h2>
-    <ul class="talk--events">
-      <li class="talk--event"><span class="talk--event-name">Drupaldelphia, 2011</span> - Philadelphia, PA</li>
-      <li class="talk--event"><span class="talk--event-name">NY Drupal Camp 10</span> - NYC, NY</li>
-      <li class="talk--event"><span class="talk--event-name">Design for Drupal 2011</span> - MIT, Cambridge, MA</li>
-      <li class="talk--event"><span class="talk--event-name">Capital Camp 2011</span> - Washington, DC</li>
-    </ul>
-  </div>
-
-  <div class="talk">
-    <h2 class="talk--title"><span class="width-limiter">Design in the Browser</span></h2>
-    <ul class="talk--events">
-      <li class="talk--event"><a href="http://chicago2011.drupal.org/sessions/design-browser-use-css-stop-lying-ourselves-and-our-clients">Drupalcon 2011</a> - Chicago, IL</li>
-      <li class="talk--event"><span class="talk--event-name">Drupal Camp Denver, 2011</span> - Denver, CO</li>
-      <li class="talk--event"><span class="talk--event-name">Design for Drupal 2010</span> - MIT, Cambridge, MA</li>
-      <li class="talk--event"><span class="talk--event-name">NY Drupal Camp 8</span> - NYC, NY</li>
-      <li class="talk--event"><span class="talk--event-name">BAD Camp</span> - San Fransisco, 2010</li>
-      <li class="talk--event"><span class="talk--event-name">Drupaldelphia 2010</span>, Philadelphia, PA</li>
-    </ul>
-  </div>
+  {{#talks}}
+    {{>organisms-talk}}
+  {{/talks}}
 </div>
